--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "react": "^16.0.0"
   },
   "dependencies": {
-    "localized-strings": "^0.2.0"
+    "localized-strings": "git+https://github.com/richie-south/localized-strings.git"
   },
   "peerDependencies": {
     "react": "^16.0.0 || ^15.6.0"
